# silo

./: .gitignore  .pylintrc  404.html  CONTRIBUTING.md  LICENSE  README.md  github_inspector_skill.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  lint.yml  publish.yml  tests.yml
docs/: cli.md  cli.ru.md  index.md  index.ru.md  mcp.md  mcp.ru.md  quickstart.en.md  quickstart.md  quickstart.ru.md  security.md  security.ru.md  writing_skills.md  writing_skills.ru.md
docs/guide/: architecture.md  architecture.ru.md  interactive.md  interactive.ru.md  quickstart.md  quickstart.ru.md  routing.md  routing.ru.md  security-overview.md  security-overview.ru.md  security.md  security.ru.md  writing_skills.md  writing_skills.ru.md
docs/integrations/: claude.md  claude.ru.md  custom.md  custom.ru.md  mcp.md  mcp.ru.md  vault.md  vault.ru.md
docs/reference/: cli.md  cli.ru.md  config.md  config.ru.md  skill-sdk.md  skill-sdk.ru.md
docs/tutorials/: first-skill.md  first-skill.ru.md  multi-tool.md  multi-tool.ru.md
examples/: deletion_skill.py  github_mcp_skill.py  github_skill.py  todoist_skill.py  weather_skill.py
guide/architecture/: index.html
guide/interactive/: index.html
guide/quickstart/: index.html
guide/routing/: index.html
guide/security/: index.html
guide/security-overview/: index.html
guide/writing_skills/: index.html
integrations/claude/: index.html
integrations/custom/: index.html
integrations/mcp/: index.html
integrations/vault/: index.html
reference/cli/: index.html
reference/config/: index.html
reference/skill-sdk/: index.html
ru/: index.html
ru/guide/architecture/: index.html
ru/guide/interactive/: index.html
ru/guide/quickstart/: index.html
ru/guide/routing/: index.html
ru/guide/security/: index.html
ru/guide/security-overview/: index.html
ru/guide/writing_skills/: index.html
ru/integrations/claude/: index.html
ru/integrations/custom/: index.html
ru/integrations/mcp/: index.html
ru/integrations/vault/: index.html
ru/reference/cli/: index.html
ru/reference/config/: index.html
ru/reference/skill-sdk/: index.html
ru/tutorials/first-skill/: index.html
ru/tutorials/multi-tool/: index.html
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/cli/: index.html
site/mcp/: index.html
site/quickstart/: index.html
site/ru/: index.html
site/ru/cli/: index.html
site/ru/mcp/: index.html
site/ru/quickstart/: index.html
site/ru/security/: index.html
site/ru/writing_skills/: index.html
site/search/: search_index.json
site/security/: index.html
site/writing_skills/: index.html
src/silo/: __init__.py  auth_server.py  cli.py  core.py  hub.py  interaction.py  manifest.py  mcp_adapter.py  mcp_server.py  registry.py  runner.py  search.py  secrets.py  security.py  skill.py
src/silo/core/: hub.py  runner.py  skill.py  types.py
src/silo/responses/: __init__.py  base.py  (+4 more)
tests/: conftest.py  test_cli.py  test_cli_bugs.py  test_hub.py  test_security.py  test_vault.py
tutorials/first-skill/: index.html
tutorials/multi-tool/: index.html
(+11 files in other folders)
