[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "silo"
version = "0.1.1"
description = "A lightweight framework for building secure, isolated, and LLM-ready AI skills."
authors = [
    { name = "Timur Pitsunov", email = "pitsunovtimur@gmail.com" },
]
dependencies = [
    "keyring>=25.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "cryptography>=42.0.0",
    "rank-bm25>=0.2.2"
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["ai", "mcp", "agents", "skills", "cli", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
mcp = ["mcp[cli]"]
docs = ["mkdocs-material", "mkdocs", "mkdocs-static-i18n"]

[project.scripts]
silo = "silo.cli:main"

[project.urls]
Homepage = "https://github.com/example/silo-framework"

[tool.hatch.build.targets.wheel]
packages = ["src/silo"]
artifacts = ["src/silo/templates/*"]
